--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </header>
 
   <main class="container">
-    <section class="article">
+    <section class="matter">
       <img src="./assets/unsplash_H-XOmJhbM3s.png" alt="Imagem de um gato na montanha">
       <div class="title">
         <h1>Seriam os gatos astronautas?</h1>
@@ -36,6 +36,7 @@
         <img src="./assets/Icon.png" alt="">
       </div>
       <p>Os gatos são animais fascinantes e cercados de mistérios. De temperamento independente e misterioso, esses felinos são conhecidos por sua agilidade, elegância e um comportamento muitas vezes imprevisível. Contudo, recentemente, uma teoria tem ganhado espaço na internet e entre teóricos de conspiração: seriam os gatos astronautas?
+        <br>
         A teoria sugere que os gatos não são animais terrestres, mas sim seres extraterrestres enviados para realizar uma missão específica em nosso planeta. Há relatos históricos que apontam para o fato de que os gatos eram considerados seres sagrados em diferentes culturas e até mesmo associados a figuras divinas. Isso poderia indicar que os gatos têm uma origem muito mais mística do que se pensava anteriormente.
         <br>
         <br>
@@ -43,7 +44,7 @@
       </p>
     </section>
 
-    <section class="related-article">
+    <section class="related-matter">
       <h2>Artigos relacionados</h2>
 
       <ul>
